# epiagent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  conftest.py  ebola_pipeline.py  ebola_workflow.R.legacy  pyproject.toml  registry.json  test_functionality.py  test_mcp_server.py  test_structure.py
.agent/skills/epidemiological_analysis/: SKILL.md
.claude/: settings.local.json
.claude/skills/analysis/: SKILL.md
.claude/skills/data-intake/: SKILL.md
.claude/skills/epiverse-overview/: SKILL.md
.claude/skills/parameters/: SKILL.md
.claude/skills/reporting/: SKILL.md
.claude/skills/simulation/: SKILL.md
.github/workflows/: ci.yml
R/: workflow_functions.R
data/: README.md
data/processed/: analysis_results.rds  cleaned_tagged_linelist.qs  descriptive_statistics.txt  measles_parameters.rds  measles_parameters_summary.txt  moissala_linelist_cleaned.csv  moissala_linelist_cleaned.rds  moissala_linelist_tags.txt  plot_objects.rds
data/raw/: simulated_contacts.qs  simulated_linelist.qs
docs/: SOP_epidemiological_analysis.md  ebola-outbreak-analysis.md  epiverse_packages.json  model_context_protocol.md  tool_manifest.json
examples/: README.md  __init__.py  handbook_workflow.py
examples/ebola_outbreak/: ebola_analysis.html  ebola_analysis.qmd  references.bib
outputs/: README.md
scripts/: setup_workspace.py
src/epiagent/: __init__.py  __main__.py  agent.py  setup_utils.py
tests/: test_agent.py  test_gitingest_wrapper.py  test_integration.py  test_r_wrappers.py  test_registry.py  test_tool_manifest.py  test_wrappers.py
(+6 files in other folders)
