[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epiagent"
version = "0.1.0"
description = "Dynamic wrappers that expose Epiverse Trace R packages to Python LLM agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Epiverse Trace", email = "trace@epiverse.org" }
]
dependencies = [
  "pandas>=1.5",
  "rpy2>=3.6",
  "gitingest>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/epiverse-trace"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
